# practicas-open-gl

./: .gitignore  CMakeLists.txt  GUIA-TERMINAL.md  LoadShaders.cpp  LoadShaders.h  README.md  circle.frag  circle.vert  circle_glfw  main_glfw.cpp  triangles  triangles.cpp  triangles.frag  triangles.vert  triangles_core.cpp  triangles_glfw  vgl.h
practicas open gl/01-hello-triangle/: CMakeLists.txt  README.md
practicas open gl/01-hello-triangle/src/: main.cpp
scripts/: build.sh
src/: main.cpp
